\name{NEWS}
\title{News for Package \pkg{ncar}}
\section{Changes in version 0.3.3 (2017-03-12)}{
  \itemize{
    \item{Various report functions like pdfNCA, rtfNCA, and txtNCA are added.}
    \item{IndiNCA and NCA are deprecated.}
  }
}
