@@ -1,6 +1,6 @@
 Package: ncar
-Version: 0.3.3
-Date: 2017-03-12
+Version: 0.3.4
+Date: 2017-03-17
 Title: Noncompartmental Analysis for Pharmacokinetic Data for Report
 Description: Conduct a noncompartmental analysis as closely as possible to the most widely used commercial software for pharmacokinetic analysis, i.e. 'Phoenix(R) WinNonlin(R)' <https://www.certara.com/software/pkpd-modeling-and-simulation/phoenix-winnonlin/>.
              Some features are
@@ -19,5 +19,5 @@ NeedsCompilation: no
 LazyLoad: yes
 Repository: CRAN
 URL: https://cran.r-project.org/package=ncar
-Packaged: 2017-03-14 06:33:26 UTC; K
-Date/Publication: 2017-03-14 08:08:11
+Packaged: 2017-03-17 05:39:55 UTC; K
+Date/Publication: 2017-03-17 11:16:30 UTC
