@@ -1,5 +1,10 @@
 \name{NEWS}
 \title{News for Package \pkg{ncar}}
+\section{Changes in version 0.3.4 (2017-03-12)}{
+  \itemize{
+    \item{\pkg{ncar} does not sort subject ID any more.}
+  }
+}
 \section{Changes in version 0.3.3 (2017-03-12)}{
   \itemize{
     \item{Various report functions like pdfNCA, rtfNCA, and txtNCA are added.}
